# Hackharvard2025

./: .gitignore  COMPLETE_SETUP_GUIDE.md  FINAL_SETUP_STEPS.md  FLOW_EXPLANATION.md  HOW_TO_ADD_AUDITOR.md  MIGRATION_SUMMARY.md  PROJECT_COMPLETE.md  QUICKTEST.md  README.md  SIMPLIFIED_ENV_GUIDE.md  START_HERE.md  SWIFT_APP_INTEGRATION.md  WHERE_IS_AUDITOR_TAB.md  package-lock.json
agent/: .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  SETUP.md  env.example  pyproject.toml  requirements.txt  run.bat
agent/src/: __init__.py  config.py  edge_client.py  edge_jobs.py  gemini.py  main.py  r2.py  state.py
agent/src/checks/: __init__.py  deterministic.py
agent/src/graph/: __init__.py  build.py  nodes.py
agent/tests/: __init__.py  test_checks.py  test_graph.py
app/: build_and_run.sh
backend/: .dev.vars.example  .eslintrc.json  .gitignore  .npmrc  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  PROJECT_SUMMARY.md  QUEUE_MIGRATION.md  QUICKSTART.md  README.md  START_HERE.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
backend/examples/: api-collection.json  websocket-client.html
backend/migrations/: 001_init.sql  002_jobs.sql
landing-page/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
swift-frontend/: build_and_run.sh
windows-frontend/: .gitignore  COMPLETE_SETUP.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  build.bat  build.sh  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.main.json  tsconfig.node.json
(+213 files in other folders)
